crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__slot__named_slot.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<slot name=\"header\"></slot>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}>`)
  _ssrRenderSlot(_ctx.$slots, "header", {}, null, _push, _parent)
  _push(`</div>`)
}
