crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__slot__slot_with_bound_props.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<slot v-bind=\"formState\" :status=\"status\">fallback content</slot>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}>`)
  _ssrRenderSlot(_ctx.$slots, "default", _mergeProps(_ctx.formState, { status: _ctx.status }), () => {
    _push(`fallback content`)
  }, _push, _parent)
  _push(`</div>`)
}
